--- a/src/components/navbar/index.module.css
+++ b/src/components/navbar/index.module.css
@@ -28,11 +28,12 @@
 
 .ButtonWrapper button{
     width: fit-content;
-    padding: 8px 20px;
+    padding: 12px 20px;
     border: 1px solid #337934;
     display: flex;
     align-items: center;
     gap: 10px;
+    height: fit-content;
 }
 
 .ButtonWrapper .CartBtn{
