--- a/src/pages/deliveryAddress/components/payments/index.module.css
+++ b/src/pages/deliveryAddress/components/payments/index.module.css
@@ -24,7 +24,7 @@
 .Wrapper > div > div {
   display: flex;
   align-items: center;
-  gap: 10vw;
+  gap: 20px;
   background-color: white;
   border: 1px solid #616161;
   width: 100%;
@@ -32,8 +32,8 @@
   border-radius: 10px;
 }
 
-.Wrapper > div > div > div {
-  width: 80px;
+.Wrapper > div > div > label {
+  width: 100%;
   display: flex;
   align-items: center;
   gap: 20px;
@@ -41,4 +41,5 @@
 
 .Wrapper input[type="checkbox"] {
   border-radius: 50%;
+  width: fit-content;
 }
