--- a/src/pages/home/components/onlineOder/index.module.css
+++ b/src/pages/home/components/onlineOder/index.module.css
@@ -123,8 +123,11 @@
   align-items: center;
   position: relative;
   overflow: hidden;
+  gap: 20px;
 }
-
+.ExcitingOffers  h1{
+    align-self: flex-start;
+}
 .ExcitingOffers .SwiperContainer {
   display: flex;
   width: 100%;
@@ -136,11 +139,39 @@
 .ExcitingOffers .SwiperContainer > div {
   flex: 0 0 auto;
   width: calc(100% / 3);
+  min-height: 220px;
+  height: fit-content;
+  border-radius: 15px;
+  display: flex;
+  padding: 0px 20px;
+  gap: 20px;
+  justify-content: space-between;
   background: url(./assets/bgBanner.png) center center/cover no-repeat;
 }
+.ExcitingOffers .SwiperContainer > div > div {
+  padding: 20px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+}
 
+.ExcitingOffers .SwiperContainer > div > div h2 {
+  text-align: left;
+  color: white;
+  font-size: 1.6rem;
+  line-height: 1.3;
+}
+.ExcitingOffers .SwiperContainer > div > div button {
+  background-color: black;
+  padding: 10px 15px;
+  border-radius: 25px;
+  font-size: 17px;
+  color: white;
+}
 .ExcitingOffers .SwiperContainer > div img {
-  width: 100%;
+  min-height: 220px;
+  height: fit-content;
   object-fit: contain;
 }
 
@@ -153,7 +184,7 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  color: #eb0c1e;
+  color: #49963b;
   font-size: 20px;
   z-index: 0;
 }
