--- a/src/pages/home/components/onlineOder/index.module.css
+++ b/src/pages/home/components/onlineOder/index.module.css
@@ -125,8 +125,8 @@
   overflow: hidden;
   gap: 20px;
 }
-.ExcitingOffers  h1{
-    align-self: flex-start;
+.ExcitingOffers h1 {
+  align-self: flex-start;
 }
 .ExcitingOffers .SwiperContainer {
   display: flex;
@@ -209,5 +209,131 @@
   .ExcitingOffers .SwiperContainer > div {
     flex: 0 0 auto;
     width: calc(100%);
+  }
+}
+
+.SelectionsWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.SelectionsWrapper .FilterContent {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 20px 0px;
+  width: 100%;
+}
+
+.SelectionsWrapper .FilterContent p {
+  background-color: #52a54e;
+  color: white;
+  padding: 12px 20px;
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.SelectionsWrapper .FilterContent p button {
+  background-color: transparent;
+  color: white;
+}
+
+.Selections {
+  width: 100%;
+  max-height: 100vh;
+  display: flex;
+  overflow-y: scroll;
+}
+
+.Selections .LeftNav {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  min-width: 200px;
+  flex-shrink: 0;
+
+}
+
+.Selections .LeftNav > button {
+  background-color: white;
+  color: black;
+  padding: 12px 15px;
+  text-align: left;
+  font-size: 17px;
+  text-transform: capitalize;
+}
+
+.Selections .LeftNav .activebtn {
+  background: linear-gradient(
+    90deg,
+    rgba(77, 157, 69, 0) 0%,
+    rgba(51, 121, 52, 0.25) 100%
+  );
+
+  color: #337934;
+  font-weight: 600;
+  border-right: 5px solid #337934;
+}
+
+.Selections .RightDiv {
+  display: flex;
+  width: calc(100%);
+  padding: 0px 15px 15px;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.Selections .RightDiv .Individual {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: left;
+  gap: 10px;
+}
+
+
+@media screen and (max-width: 1400px) {
+  .Selections .RightDiv .Individual {
+    width: calc(100% / 4 - 30px);
+    min-width: 150px;
+  }
+
+
+
+}
+
+@media screen and (max-width: 900px) {
+  .Selections .RightDiv .Individual {
+    width: calc(100% / 3 - 20px);
+    min-width: 150px;
+    height: fit-content;
+  }
+}
+@media screen and (max-width: 500px) {
+  .Selections {
+    flex-direction: column;
+    padding: 0px 10vw;
+    gap: 15px;
+  }
+  .Selections .LeftNav {
+    width: 100%;
+    align-items: center;
+    background-color: rgb(243, 243, 243);
+    padding: 20px;
+  }
+  .Selections .LeftNav > button {
+    width: 100%;
+    text-align: left;
+    background-color: transparent;
+  }
+  .Selections .RightDiv {
+    width: 100%;
+  }
+  .Selections .RightDiv .Individual {
+    width: calc(100% / 2 - 10px);
+    min-width: 100px;
+    height: fit-content;
   }
 }
