--- a/src/pages/deliveryAddress/index.module.css
+++ b/src/pages/deliveryAddress/index.module.css
@@ -1,5 +1,5 @@
 .Wrapper {
-  padding: 80px 0px 0px;
+  padding: 95px 0px 0px;
   background: #f7f7f7;
 }
 
@@ -25,7 +25,7 @@
   width: calc(35% - 2.5vw);
   position: sticky;
   height: fit-content;
-  top: 20px;
+  top: 100px;
 }
 .InnerWrapper .Orders h1 {
   color: #000;
@@ -56,4 +56,18 @@
 
 .Orders .Title > div span {
   color: #616161;
+}
+
+@media screen and (max-width: 700px) {
+  .Wrapper .InnerWrapper {
+    flex-direction: column-reverse;
+  }
+
+  .Wrapper .InnerWrapper > .Orders{
+    position: static;
+    width: 100%;
+  }
+  .Wrapper .InnerWrapper > div {
+    width: 100%;
+  }
 }
