--- a/src/pages/home/components/onlineOder/index.module.css
+++ b/src/pages/home/components/onlineOder/index.module.css
@@ -253,7 +253,9 @@
   gap: 5px;
   min-width: 200px;
   flex-shrink: 0;
-
+  border-right: 0.5px solid #e0e0e0;
+  position: sticky;
+  top: 0;
 }
 
 .Selections .LeftNav > button {
@@ -271,7 +273,7 @@
     rgba(77, 157, 69, 0) 0%,
     rgba(51, 121, 52, 0.25) 100%
   );
-
+  margin-right: -2px;
   color: #337934;
   font-weight: 600;
   border-right: 5px solid #337934;
@@ -288,20 +290,64 @@
 .Selections .RightDiv .Individual {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  text-align: left;
+  align-items: center;
   gap: 10px;
+  width: calc(100%/4 - 20px);
+  position: relative;
+  border-radius: 16px;
+  background: #fff;
+  box-shadow: 0px 4px 36px 0px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  max-width: 350px;
+}
+.Selections .RightDiv .Individual > svg {
+  position: absolute;
+  left: 20px;
+  top: 20px;
+}
+.Selections .RightDiv .Individual > img {
+  width: 90%;
+  border-radius: 50%;
 }
 
+.Selections .RightDiv .Individual > .Name {
+  font-weight: 500;
+  font-size: 17px;
+}
 
+.Selections .RightDiv .Individual > .Rate {
+  color: #8ebf47;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.Selections .RightDiv .Individual > .ButtonWrap {
+  display: flex;
+  border-radius: 8px;
+  border: 1px solid #cbc2c2;
+  background: #fff;
+  width: 100%;
+  justify-content: space-between;
+  padding: 8px 10px;
+  align-items: center;
+}
+
+.Selections .RightDiv .Individual > .ButtonWrap button {
+  background-color: transparent;
+  font-size: 30px;
+  color: #337934;
+  line-height: 0.2;
+}
+.Selections .RightDiv .Individual > .ButtonWrap p {
+  color: #8ebf47;
+  font-size: 25px;
+  font-weight: 700;
+}
 @media screen and (max-width: 1400px) {
   .Selections .RightDiv .Individual {
     width: calc(100% / 4 - 30px);
     min-width: 150px;
   }
-
-
-
 }
 
 @media screen and (max-width: 900px) {
