--- a/src/pages/deliveryAddress/components/deliverySchedule/index.module.css
+++ b/src/pages/deliveryAddress/components/deliverySchedule/index.module.css
@@ -22,7 +22,7 @@
 
 .Wrapper > div > div {
   width: calc(100% / 3 - 10px);
-  border: 2px solid #BDB7B7;
+  border: 2px solid #bdb7b7;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -33,8 +33,18 @@
   background-color: #fff;
 }
 
-.Wrapper > div > div:hover{
-    background-color: #337934;
-    color: white;
-    border-color: #337934;
+.Wrapper > div > div:hover {
+  background-color: #337934;
+  color: white;
+  border-color: #337934;
+}
+
+@media screen and (max-width: 700px) {
+  .Wrapper {
+    overflow-x: hidden;
+  }
+  .Wrapper > div {
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+  }
 }
