--- a/src/pages/home/components/about/index.module.css
+++ b/src/pages/home/components/about/index.module.css
@@ -11,11 +11,22 @@
 .Wrapper .Header {
   display: flex;
   justify-content: space-between;
+  gap: 10px;
 }
 .Wrapper .Header > div {
   display: flex;
   gap: 10px;
   align-items: center;
+}
+
+.Header .Title{
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.Header .Title h1{
+  line-height: 1.3;
 }
 
 .Header .Title > div {
@@ -61,4 +72,25 @@
   align-items: center;
   padding: 10px 20px;
   border-radius: 12px;
+}
+
+
+@media screen and (max-width:550px) {
+
+  .Wrapper .Header {
+    margin-bottom: 20px;
+    flex-direction: column;
+  }
+  .Wrapper .SearchBar > div {
+    width: 100%;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+  .Wrapper .SearchBar > button {
+    display: none;
+  }
+}
+
+@media screen and (max-width:420px){
+
 }
