--- a/src/pages/home/components/onlineOder/index.module.css
+++ b/src/pages/home/components/onlineOder/index.module.css
@@ -145,6 +145,7 @@
   display: flex;
   padding: 0px 20px;
   gap: 20px;
+  align-items: flex-end;
   justify-content: space-between;
   background: url(./assets/bgBanner.png) center center/cover no-repeat;
 }
@@ -199,16 +200,34 @@
   right: 0vw;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1400px) {
   .ExcitingOffers .SwiperContainer > div {
     flex: 0 0 auto;
     width: calc(100% / 2);
   }
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 1000px) {
+  .ExcitingOffers .SwiperContainer > div > div h2 {
+    font-size: 23px;
+  }
+  .ExcitingOffers .SwiperContainer > div img {
+    min-height: 180px;
+    height: 180px;
+  }
+}
+@media screen and (max-width: 790px) {
   .ExcitingOffers .SwiperContainer > div {
-    flex: 0 0 auto;
     width: calc(100%);
+    max-width: 500px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .ExcitingOffers .SwiperContainer > div > div h2 {
+    font-size: 19px;
+  }
+    .ExcitingOffers .SwiperContainer > div img {
+    min-height: 160px;
+    height: 160px;
   }
 }
 
@@ -292,7 +311,7 @@
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  width: calc(100%/4 - 20px);
+  width: calc(100% / 4 - 20px);
   position: relative;
   border-radius: 16px;
   background: #fff;
