--- a/src/components/popups/cart/index.module.css
+++ b/src/components/popups/cart/index.module.css
@@ -1,133 +1,104 @@
 .iconTrigger {
-	border-radius: 35px;
-	background-color: #337934;
-	color: #337934;
+  border-radius: 35px;
+  background-color: #337934 !important;
+  color: #ffffff;
+  display: flex;
+  gap: 20px;
 }
 
 .popoverContent {
-	background-color: rgb(255, 255, 255);
-	z-index: 9999;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	gap: 20px;
-	/* position: absolute;
-	height: 100vh;
-	width: 100vw;
-	max-width: 500px;
-	right: 0;
-	transform: translate(0%, -9%);
-	padding: 15px 20px; */
+  background-color: rgb(255, 255, 255);
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
+  position: fixed;
+  top: 0px;
+  right: calc(-200px - 3vw);
+  height: calc(100vh - 80px);
+  min-width: 400px;
+  padding: 15px;
+  border-radius: 15px;
+  color: #000000;
 }
 
 .popoverContent .Topset {
-	display: flex;
-	justify-content: space-between;
-	width: 100%;
-	font-size: 20px;
-	align-items: center;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
 }
 
-.popoverContent .checkoutbutton {
-	display: flex;
-	padding: 2px 2px 2px 20px;
-	width: 100%;
-	justify-content: space-between;
-	color: white;
-	font-size: 18px;
-	background-color: #eb0c1e;
-	border-radius: 20px;
-	align-items: center;
+.popoverContent .Topset h2 {
+  color: #337934;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 1.2;
 }
-
-.popoverContent .checkoutbutton button {
-	background-color: white;
-	color: #eb0c1e;
-	padding: 10px 15px;
-	border-radius: 20px;
+.popoverContent .Topset p {
+  font-size: 16px;
+  color: #757575;
+}
+.popoverContent .Topset button {
+  background-color: transparent;
+  color: #000000;
+  font-size: 20px;
 }
 
 .popoverContent .SelectedItems {
-	display: flex;
-	flex-direction: column;
-	gap: 15px;
-	height: 100%;
-	overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 .SelectedItems .Individual {
-	display: flex;
-	gap: 15px;
-	align-items: center;
-	justify-content: space-between;
-	width: 100%;
-	border: 0.5px solid #eb0c1e;
-	border-radius: 20px;
-	padding: 10px;
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  border: 0.5px solid #eb0c1e;
+  border-radius: 20px;
+  padding: 10px;
 }
 
 .SelectedItems .Individual > div {
-	display: flex;
-	gap: 8px;
-	align-items: center;
+  display: flex;
+  gap: 8px;
+  align-items: center;
 }
 
-.SelectedItems .Individual > div img {
-	width: 80px;
-	height: 80px;
-	object-fit: contain;
+.SelectedItems .Individual .Image {
+  width: 80px;
+  height: 80px;
+  object-fit: contain;
 }
 
 .Individual .Counter {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: 18px;
-	background-color: rgb(209, 209, 209);
-	padding: 8px;
-	border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  background-color: #ffffff;
+  padding: 8px;
+  border-radius: 12px;
+  gap: 20px;
+  color: #8EBF47;
+  border: 1px solid #CFCFCF;
 }
 
 .Individual .Counter button {
-	font-size: 20px;
-	background-color: transparent;
-}
-
-.Individual .DetailWrap {
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	font-size: 18px;
-	font-weight: 600;
-}
-
-.Individual .Detail {
-	display: flex;
-	flex-direction: column;
-	gap: 6px;
-}
-
-.Individual .Amount {
-	display: flex;
-	gap: 10px;
-	align-self: flex-end;
-	line-height: 1;
-	align-items: flex-end;
-}
-
-.Individual .Amount button {
-	color: grey;
-	font-size: 18px;
-}
-
-.Individual .Amount button:hover {
-	color: #eb0c1e;
+  font-size: 20px;
+  background-color: transparent;
+  color: #8EBF47;
 }
 
 @media screen and (max-width: 440px) {
-	.SelectedItems .Individual {
-		flex-direction: column;
-		align-items: flex-start;
-	}
+  .SelectedItems .Individual {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
