--- a/src/components/footer/index.module.css
+++ b/src/components/footer/index.module.css
@@ -107,6 +107,7 @@
   .Wrapper {
     flex-direction: column;
     align-items: flex-start;
+    padding-bottom: 80px;
   }
   .working {
     width: 100%;
