--- a/src/pages/home/components/onlineOder/index.module.css
+++ b/src/pages/home/components/onlineOder/index.module.css
@@ -253,12 +253,13 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  gap: 20px;
 }
 
 .SelectionsWrapper .FilterContent {
   display: flex;
   flex-wrap: wrap;
-  padding: 20px 0px;
+  padding: 20px 0px 0px;
   width: 100%;
 }
 
@@ -275,6 +276,81 @@
 .SelectionsWrapper .FilterContent p button {
   background-color: transparent;
   color: white;
+}
+.SelectionsWrapper .FilterSection {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.SelectionsWrapper .FilterSection > div {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.SelectionsWrapper .FilterSection > div button {
+  background-color: transparent;
+  color: black;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border: 1px solid #5e6366;
+  padding: 10px 15px;
+  border-radius: 12px;
+  font-size: 17px;
+}
+
+.SelectionsWrapper .FilterSection > div .Active {
+  border: 2px solid #337934;
+  color: #337934;
+  font-weight: 600;
+}
+
+.SelectionsWrapper .FilterSection .dropdown {
+  position: relative;
+  user-select: none;
+  width: 250px;
+  text-align: left;
+}
+
+.SelectionsWrapper .FilterSection .dropdownHeader {
+  padding: 10px;
+  background-color: #f0f0f0;
+  cursor: pointer;
+  width: 100%;
+  border-radius: 12px;
+  border: 1px solid #5e6366;
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
+.SelectionsWrapper .FilterSection .dropdownHeader div {
+  display: flex;
+  gap: 0px;
+}
+.SelectionsWrapper .FilterSection .dropdownList {
+  position: absolute;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  top: 50px;
+  border-radius: 12px;
+}
+
+.SelectionsWrapper .FilterSection .dropdownItem {
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.SelectionsWrapper .FilterSection .dropdownItem:hover {
+  background-color: #f0f0f0;
+  border-radius: 12px;
 }
 
 .Selections {
@@ -337,6 +413,20 @@
   padding: 20px;
   max-width: 350px;
 }
+
+.Selections .RightDiv .Individual .RatingTop {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background-color: #337934;
+  padding: 2px 5px;
+  border-radius: 5px;
+  color: white;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
 .Selections .RightDiv .Individual > svg {
   position: absolute;
   left: 20px;
@@ -365,7 +455,7 @@
   background: #fff;
   width: 100%;
   justify-content: space-between;
-  padding: 8px 10px;
+  padding: 8px 23px;
   align-items: center;
 }
 
@@ -375,6 +465,12 @@
   color: #337934;
   line-height: 0.2;
 }
+.Selections .RightDiv .Individual > .ButtonWrap button > p {
+  content: " ";
+  height: 2px;
+  width: 15px;
+  background-color: #337934;
+}
 .Selections .RightDiv .Individual > .ButtonWrap p {
   color: #8ebf47;
   font-size: 25px;
@@ -383,14 +479,14 @@
 @media screen and (max-width: 1400px) {
   .Selections .RightDiv .Individual {
     width: calc(100% / 4 - 30px);
-    min-width: 150px;
+    min-width: 180px;
   }
 }
 
 @media screen and (max-width: 900px) {
   .Selections .RightDiv .Individual {
     width: calc(100% / 3 - 20px);
-    min-width: 150px;
+    min-width: 170px;
     height: fit-content;
   }
 }
