--- a/src/pages/home/components/onlineOder/index.module.css
+++ b/src/pages/home/components/onlineOder/index.module.css
@@ -352,7 +352,40 @@
   background-color: #f0f0f0;
   border-radius: 12px;
 }
+.SelectionsWrapper .FilterSectionMobile {
+  display: none;
+}
 
+.SelectionsWrapper .FilterSectionMobile .Individuals {
+  display: flex;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: fit-content;
+  background-color: #f9f9f7;
+  padding: 20px 10px;
+  border-radius: 25px 25px 0px 0px;
+  flex-direction: column;
+  gap: 25px;
+  align-items: flex-start;
+  box-shadow: 0px 0px 7.1px 0px rgba(0, 0, 0, 0.25);
+  z-index: 99999;
+  min-height: 50vh;
+  justify-content: space-between;
+}
+
+.SelectionsWrapper .FilterSectionMobile .Individuals .Header {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.SelectionsWrapper .FilterSectionMobile .Individuals .ActionButtons {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
 .Selections {
   width: 100%;
   max-height: 100vh;
@@ -488,6 +521,14 @@
     width: calc(100% / 3 - 20px);
     min-width: 170px;
     height: fit-content;
+  }
+}
+@media screen and (max-width: 600px) {
+  .SelectionsWrapper .FilterSection {
+    display: none;
+  }
+  .SelectionsWrapper .FilterSectionMobile {
+    display: flex;
   }
 }
 @media screen and (max-width: 500px) {
