--- a/src/pages/home/components/onlineOder/index.module.css
+++ b/src/pages/home/components/onlineOder/index.module.css
@@ -355,7 +355,17 @@
 .SelectionsWrapper .FilterSectionMobile {
   display: none;
 }
-
+.SelectionsWrapper .FilterSectionMobile > button {
+  border-radius: 8px;
+  border: 1px solid #c4c4c4;
+  background: #fff;
+  color: black;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  padding: 10px 20px;
+  font-weight: 600;
+}
 .SelectionsWrapper .FilterSectionMobile .Individuals {
   display: flex;
   position: fixed;
@@ -364,7 +374,7 @@
   width: 100%;
   height: fit-content;
   background-color: #f9f9f7;
-  padding: 20px 10px;
+  padding: 30px 5vw;
   border-radius: 25px 25px 0px 0px;
   flex-direction: column;
   gap: 25px;
@@ -380,11 +390,64 @@
   width: 100%;
   justify-content: space-between;
 }
-
+.Individuals .Header button {
+  background-color: transparent;
+  color: black;
+  font-size: 22px;
+}
 .SelectionsWrapper .FilterSectionMobile .Individuals .ActionButtons {
   display: flex;
   width: 100%;
   justify-content: space-between;
+}
+.Individuals .ActionButtons button{
+  background-color: transparent;
+  color: black;
+}
+
+.Individuals .ActionButtons .apply{
+  background-color: #337934;
+  color: white;
+  padding: 12px 25px;
+  border-radius: 12px;
+}
+.Individuals .Content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: left;
+  gap: 25px;
+  width: 100%;
+}
+.Individuals .Content > div {
+  padding: 15px;
+  background-color: white;
+  width: 100%;
+  border-radius: 12px;
+  box-shadow: 0px 0px 7.1px 0px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.Individuals .Content > div h3 {
+  font-size: 17px;
+  font-weight: 500;
+}
+.Individuals .Content > div>div{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.Individuals .Content > div button {
+  border-radius: 7.505px;
+  border: 0.625px solid var(--text-secondary, #5e6366);
+  background: #fff;
+  color: black;
+  padding: 10px;
+  width: fit-content;
+  display: flex;
+  align-items: center;
 }
 .Selections {
   width: 100%;
