--- a/src/pages/home/components/landing/index.module.css
+++ b/src/pages/home/components/landing/index.module.css
@@ -1,68 +1,73 @@
 .Wrapper {
-  display: flex;
-  width: 100%;
-  gap: 10px;
-  padding: 0px 5vw 35px;
-  height: 100%;
-  background-color: white;
+	display: flex;
+	width: 100%;
+	gap: 10px;
+	padding: 0px 5vw 35px;
+	height: 100%;
+	background-color: white;
 }
 
 .Wrapper .landing {
-  width: 60%;
-  height: 100%;
-  position: relative;
+	width: 60%;
+	height: 100%;
+	position: relative;
 }
 .landing .logos {
-  width: 150px;
-  background-color: #337934;
-  height: 150px;
-  padding: 20px;
-  border-radius: 50%;
-  border: 5px solid white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  bottom: -25px;
-  left: 15px;
+	width: 150px;
+	background-color: #337934;
+	height: 150px;
+	padding: 20px;
+	border-radius: 50%;
+	border: 5px solid white;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	bottom: -25px;
+	left: 15px;
 }
 .Wrapper .Secondary {
-  width: 20%;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+	width: 20%;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
 }
 .Wrapper button {
-  background: url(./assets/img4.png) center center/cover no-repeat;
-  width: calc(20% - 20px);
-  border-radius: 20px;
-  font-size: 18px;
-  color: white;
-  font-weight: 600;
+	background: url(./assets/img4.png) center center/cover no-repeat;
+	width: calc(20% - 20px);
+	border-radius: 20px;
+	font-size: 18px;
+	color: white;
+	font-weight: 600;
+}
+
+.Wrapper button a {
+	text-decoration: none;
+	color: white;
 }
 
 .Wrapper img {
-  width: 100%;
-  object-fit: cover;
+	width: 100%;
+	object-fit: cover;
 }
 
 @media screen and (max-width: 800px) {
-  .Wrapper .Secondary,
-  .Wrapper button {
-    display: none;
-  }
-  .Wrapper .landing {
-    width: 100%;
-  }
-  .Wrapper {
-    padding: 0px 0px 50px;
-  }
+	.Wrapper .Secondary,
+	.Wrapper button {
+		display: none;
+	}
+	.Wrapper .landing {
+		width: 100%;
+	}
+	.Wrapper {
+		padding: 0px 0px 50px;
+	}
 }
 
 @media screen and (max-width: 500px) {
-  .landing .logos {
-    bottom: -50px;
-    height: 120px;
-    width: 120px;
-  }
+	.landing .logos {
+		bottom: -50px;
+		height: 120px;
+		width: 120px;
+	}
 }
