--- a/src/pages/home/components/onlineOder/index.module.css
+++ b/src/pages/home/components/onlineOder/index.module.css
@@ -509,6 +509,7 @@
 	box-shadow: 0px 4px 36px 0px rgba(0, 0, 0, 0.2);
 	padding: 20px;
 	max-width: 350px;
+	height: max-content;
 }
 
 .Selections .RightDiv .Individual .RatingTop {
