--- a/src/components/popups/cart/index.module.css
+++ b/src/components/popups/cart/index.module.css
@@ -34,7 +34,7 @@
   border-radius: 15px;
   color: #000000;
   overflow: scroll;
-  box-shadow: 0px 4px 36px 0px rgba(0, 0, 0, 0.20);
+  box-shadow: 0px 4px 36px 0px rgba(0, 0, 0, 0.2);
 }
 
 .popoverContent .Topset {
@@ -130,9 +130,14 @@
   background-color: transparent;
   color: #8ebf47;
 }
-.popoverContent .applyCoupon{
+.popoverContent .CouponWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.popoverContent .applyCoupon {
   width: 100%;
-  border: 1px dashed #8A8484;
+  border: 1px dashed #8a8484;
   background-color: white;
   padding: 15px 8px;
   color: #000000;
@@ -141,6 +146,68 @@
   gap: 15px;
   font-size: 18px;
   border-radius: 15px;
+}
+.CouponWrapper .Content {
+  display: flex;
+  flex-direction: column;
+}
+.CouponWrapper .Content .Header {
+  display: flex;
+}
+.CouponWrapper .Content input {
+  background-color: transparent;
+  color: black;
+  border: 1px solid #5e6366;
+  border-radius: 12px 0px 0px 12px;
+  padding: 10px;
+}
+.CouponWrapper .Content .Header button {
+  background-color: #337934;
+  padding: 10px 20px;
+  border-radius: 0px 12px 12px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.CouponWrapper .Content .Body {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 10px;
+}
+.CouponWrapper .Content .Individual {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.CouponWrapper .Content .Individual > p {
+  font-size: 15px;
+  color: #8a8484;
+}
+.CouponWrapper .Content .Individual > div {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  padding: 10px;
+}
+.CouponWrapper .Content .Individual > div > p {
+  font-size: 15px;
+  color: #8a8484;
+}
+.CouponWrapper .Content .Individual > div > div {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.CouponWrapper .Content .Individual button {
+  background-color: transparent;
+  border: 1px solid #337934;
+  border-radius: 12px;
+  color: #337934;
+  padding: 12px 20px;
+  width: fit-content;
+  height: fit-content;
 }
 .Suggestion {
   width: 100%;
